Fixed Top Nav Overlap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -140,7 +140,8 @@ body {
   }
   div.wrapper {
     width: auto;
-    margin: 17px;
+    margin: 15px;
+    margin-top: 50px;
 }
 }
 /* Hide the link that should open and close the topnav on small screens */
